--- a/css/main.css
+++ b/css/main.css
@@ -429,7 +429,7 @@ img.pull-left {
 	display: none;
 }
 .pace .pace-progress {
-	background: #FF0077;
+	background: #17E7A4;
 	position: fixed;
 	z-index: 900;
 	top: 0;
@@ -1384,7 +1384,7 @@ header .logo a {
 	letter-spacing: .25rem;
 }
 .intro-content .button:hover, .intro-content .button:focus {
-	border-color: #cc005f;
+	border-color: #17E7A4;
 }
 .intro-content .button::after {
 	display: inline-block;
